# python-fastapi-vector-search

./: .coverage  .coverage.hwanguieongsMBP.attlocal.net.14160.991942  .env  Dockerfile  Dockerfile-old  README.md  config.yaml  docker-build.sh  docker-compose.yml  docker-run-entrypoints.sh  docker-run-tests.sh  docker-run.sh  docker-tests.sh  environment_search.lst  injector.py  main.py  metrics_var.py  pyproject.toml  read_config.sh  requirements-test.txt  requirements.txt  requirements_backup.txt  rmq_message_send.sh  service_start.sh  start_pytest.sh
.circleci/: config.yml
Recommendation/: Recommendation.ipynb
config/: config.py  log_config.py
controller/: Search_Router.py  api_controller.py  es_search_controller.py  es_vector_controller.py  message_controller.py  redis_controller.py  task_controller.py  vector_search_controller.py
controller/Custome_jinja/: filter.py
controller/Handler/: SearchOmniHandler.py  StatusHanlder.py
controller/Util/: es_utils.py
model/: faiss_data_vector
openapi/: .env  api_model.py  database.py  db.py  model.py  models.py  repository.py  schemas.py  vector_model.py
prometheus_fastapi_instrumentator/: __init__.py  instrumentation.py  metrics.py  middleware.py  routing.py
repository/: database.py  models.py  repository.py  schemas.py
server/: config.yaml
service/Handler/job/: task.py
service/Handler/message/: Pika_Client.py  rabbitmq_handler.py  redis_handler.py  test_send_message.py
template/: index.html
test-reports/junit/: pytest.xml
tests/: conftest.py  pytest.ini  test_api.py  test_elasticsearch.py  test_message.py  test_search.py
tests/common/: mock_service_clients.py
tests/test_mapping/: omnisearch_ngram_mapping.json  performance_metrics_mapping.json
tools/semantic_search/: Indexer.py
(+9 files in other folders)
