[tool.poetry]
name = "python-fastapi-vector-search"
version = "0.1.0"
description = ""
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fastapi_vector_search"}]

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "7.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
