[tool.poetry]
name = "python-fastapi-vector-search"
version = "0.1.0"
description = ""
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fastapi_vector_search"}]

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "7.13.0"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.2.2"
fastapi = "^0.101.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
