[tool.poetry]
name = "python-fastapi-vector-search"
version = "0.1.0"
description = ""
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fastapi_vector_search"}]

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "7.13.0"
faiss-cpu = "^1.7.4"
fastapi = "^0.101.1"
pytest = "^7.4.0"
pytz = "^2023.3"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
mock = "^5.1.0"
prometheus-client = "^0.17.1"
prometheus-fastapi-instrumentator = "^6.1.0"
starlette = "0.27.0"
pandas = "^2.1.0"
starlette-exporter = "^0.16.0"
sqlalchemy = "1.4.26"
databases = "0.5.3"
psycopg2-binary = "^2.9.7"
fastapi-pagination = "^0.12.9"
python-dotenv = "^1.0.0"
sentence-transformers = "2.2.1"

[build-system]
requires = ["poetry>=1.1.1", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"
